feat: use combined real provider by default
